[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "A utility for writing sparse files to a block device. It will zero out empty sections of the block device."
name = "sparse-flash"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.15"
indicatif = "0.16.2"
nix = "0.24.2"
tar = "0.4.38"
